fix: home bg picture

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Eldritch</title>
   </head>
   <body>
-    <div class="app" style="background-image: url(/assets/home.png)">
+    <div class="app">
       <div class="ancients-container"></div>
       <div class="difficulty-container">
         <div class="difficulty easy">Низкая</div>
